v1.2.1-1.21.1(Added error message on GUI for invalid item from uncrafting)