@@ -50,12 +50,22 @@ import static com.coolerpromc.uncrafteverything.config.UncraftEverythingConfig.t
 
 @SuppressWarnings("unused")
 public class UncraftingTableBlockEntity extends BlockEntity implements MenuProvider {
+    public static final int NO_RECIPE = 0;
+    public static final int NO_SUITABLE_OUTPUT_SLOT = 1;
+    public static final int NO_ENOUGH_EXPERIENCE = 2;
+    public static final int NO_ENOUGH_INPUT = 3;
+    public static final int SHULKER_WITH_ITEM = 4;
+    public static final int RESTRICTED_ITEM = 5;
+    public static final int DAMAGED_ITEM = 6;
+    public static final int ENCHANTED_ITEM = 7;
+
     private List<UncraftingTableRecipe> currentRecipes = new ArrayList<>();
     private UncraftingTableRecipe currentRecipe = null;
     private Player player;
     private ContainerData data;
     private int experience = 0;
     private int experienceType; // 0 = POINT, 1 = LEVEL
+    private int status = -1;
 
     private final ItemStackHandler inputHandler = new ItemStackHandler(1){
         @Override
@@ -93,6 +103,7 @@ public class UncraftingTableBlockEntity extends BlockEntity implements MenuProvi
                 return switch (index){
                     case 0 -> experience;
                     case 1 -> experienceType;
+                    case 2 -> status;
                     default -> 0;
                 };
             }
@@ -102,12 +113,13 @@ public class UncraftingTableBlockEntity extends BlockEntity implements MenuProvi
                 switch (index){
                     case 0 -> experience = value;
                     case 1 -> experienceType = value;
+                    case 2 -> status = value;
                 }
             }
 
             @Override
             public int getCount() {
-                return 2;
+                return 3;
             }
         };
     }
@@ -189,6 +201,10 @@ public class UncraftingTableBlockEntity extends BlockEntity implements MenuProvi
     public void getOutputStacks() {
         if (!(level instanceof ServerLevel serverLevel)) return;
 
+        this.status = -1;
+
+        ItemStack inputStack = this.inputHandler.getStackInSlot(0);
+
         List<? extends String> blacklist = UncraftEverythingConfig.CONFIG.restrictions.get();
         List<Pattern> wildcardBlacklist = blacklist.stream()
                 .filter(s -> s.contains("*"))
@@ -200,7 +216,32 @@ public class UncraftingTableBlockEntity extends BlockEntity implements MenuProvi
                 || UncraftEverythingConfig.CONFIG.isItemBlacklisted(inputHandler.getStackInSlot(0))
                 || UncraftEverythingConfig.CONFIG.isItemWhitelisted(inputHandler.getStackInSlot(0))
                 || !UncraftEverythingConfig.CONFIG.isEnchantedItemsAllowed(inputHandler.getStackInSlot(0))
+                || (inputStack.getItem() == Items.SHULKER_BOX && inputStack.get(DataComponents.CONTAINER) != ItemContainerContents.EMPTY)
         ) {
+            if (inputHandler.getStackInSlot(0).getDamageValue() > 0){
+                this.status = DAMAGED_ITEM;
+            }
+
+            if (UncraftEverythingConfig.CONFIG.isItemBlacklisted(inputHandler.getStackInSlot(0))){
+                this.status = RESTRICTED_ITEM;
+            }
+
+            if (UncraftEverythingConfig.CONFIG.isItemWhitelisted(inputHandler.getStackInSlot(0))){
+                this.status = RESTRICTED_ITEM;
+            }
+
+            if (!UncraftEverythingConfig.CONFIG.isEnchantedItemsAllowed(inputHandler.getStackInSlot(0))){
+                this.status = ENCHANTED_ITEM;
+            }
+
+            if(inputStack.getItem() == Items.SHULKER_BOX && inputStack.get(DataComponents.CONTAINER) != ItemContainerContents.EMPTY){
+                this.status = SHULKER_WITH_ITEM;
+            }
+
+            if (inputHandler.getStackInSlot(0).isEmpty()){
+                this.status = NO_RECIPE;
+            }
+
             currentRecipes.clear();
             currentRecipe = null;
             experience = 0;
@@ -211,17 +252,18 @@ public class UncraftingTableBlockEntity extends BlockEntity implements MenuProvi
             return;
         }
 
-        ItemStack inputStack = this.inputHandler.getStackInSlot(0);
-
         List<RecipeHolder<?>> recipes = serverLevel.getRecipeManager().getRecipes().stream().filter(recipeHolder -> {
             if (recipeHolder.value() instanceof ShapedRecipe shapedRecipe){
-                if (shapedRecipe.result.getItem() == Items.SHULKER_BOX && inputStack.get(DataComponents.CONTAINER) != ItemContainerContents.EMPTY){
-                    return false;
+                if (shapedRecipe.result.getItem() == inputStack.getItem() && inputStack.getCount() < shapedRecipe.result.getCount()){
+                    this.status = NO_ENOUGH_INPUT;
                 }
                 return shapedRecipe.result.getItem() == inputStack.getItem() && inputStack.getCount() >= shapedRecipe.result.getCount();
             }
 
             if (recipeHolder.value() instanceof ShapelessRecipe shapelessRecipe){
+                if (shapelessRecipe.result.getItem() == inputStack.getItem() && inputStack.getCount() < shapelessRecipe.result.getCount()){
+                    this.status = NO_ENOUGH_INPUT;
+                }
                 return shapelessRecipe.result.getItem() == inputStack.getItem() && inputStack.getCount() >= shapelessRecipe.result.getCount();
             }
 
@@ -229,11 +271,15 @@ public class UncraftingTableBlockEntity extends BlockEntity implements MenuProvi
                 return inputStack.is(Tags.Items.SHULKER_BOXES) && !inputStack.is(Items.SHULKER_BOX);
             }
 
+            if (this.status == -1){
+                this.status = NO_RECIPE;
+            }
             return false;
         }).toList();
 
         if (!recipes.isEmpty() || inputStack.is(Items.TIPPED_ARROW)){
-            experience = getExperience();
+            this.status = -1;
+            this.experience = getExperience();
             this.experienceType = UncraftEverythingConfig.CONFIG.experienceType.getRaw() == UncraftEverythingConfig.ExperienceType.LEVEL ? 1 : 0;
         }
 
@@ -349,7 +395,20 @@ public class UncraftingTableBlockEntity extends BlockEntity implements MenuProvi
         this.currentRecipes = outputs;
 
         if (!currentRecipes.isEmpty()) {
-            this.currentRecipe = outputs.get(0);
+            this.currentRecipe = outputs.getFirst();
+            if(!hasRecipe()){
+                this.status = NO_SUITABLE_OUTPUT_SLOT;
+            }
+            else{
+                if (!hasEnoughExperience()) {
+                    this.status = NO_ENOUGH_EXPERIENCE;
+                }
+            }
+        }
+        else{
+            if (this.status == -1){
+                this.status = NO_RECIPE;
+            }
         }
     }
 
@@ -552,9 +611,6 @@ public class UncraftingTableBlockEntity extends BlockEntity implements MenuProvi
             if (level != null && !level.isClientSide()) {
                 level.sendBlockUpdated(getBlockPos(), getBlockState(), getBlockState(), 3);
             }
-        }
-        else if (!hasRecipe()){
-            player.displayClientMessage(Component.literal("No recipe or suitable output slot found."), false);
         }
     }
 
